# gensimilar

./: README.md  data_utils.py  main.py  mlp.py  nn.py  pyproject.toml  surnames.txt
