[tool.poetry]
name = "gensimilar"
version = "0.1.0"
description = ""
authors = ["Andrei Letenkov <andletenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
numpy = "^1.24.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.23.3"
black = "^23.1.0"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
